Fixed some overlapping issues with the intro text

--- a/src/styles/intro.scss
+++ b/src/styles/intro.scss
@@ -1,6 +1,6 @@
 .intro-container {
   background-color: var(--eerie-black);
-  height: 100vh;
+  height: 50vw;
   width: 100vw;
   position: relative;
 
@@ -9,40 +9,45 @@
   align-items: center;
   justify-content: center;
 
-  & #intro-title {
-    text-align: center;
-    color: #ebe6e6;
-    font-size: 10vh;
+  .into-title-container {
+    display: flex;
+    flex-direction: column;
 
-    &:first-letter {
-      color: #8fbc8f;
-    }
+    & #intro-title {
+      text-align: center;
+      color: #ebe6e6;
+      font-size: 5vh;
 
-    &:after {
-      content: "_";
-      margin-left: 10px;
-      color: #ffffff;
-      animation: blinking 0.9s infinite;
+      &:first-letter {
+        color: #8fbc8f;
+      }
 
-      @keyframes blinking {
-        0% {
-          opacity: 0;
-        }
-        49% {
-          opacity: 0;
-        }
-        50% {
-          opacity: 1;
+      &:after {
+        content: "_";
+        margin-left: 10px;
+        color: #ffffff;
+        animation: blinking 0.9s infinite;
+
+        @keyframes blinking {
+          0% {
+            opacity: 0;
+          }
+          49% {
+            opacity: 0;
+          }
+          50% {
+            opacity: 1;
+          }
         }
       }
     }
-  }
 
-  & #intro-scrolldown-text {
-    color: #ebe6e6;
-    font-size: 5vh;
-    position: absolute;
-    bottom: 20%;
+    & #intro-scrolldown-text {
+      color: #ebe6e6;
+      text-align: center;
+      font-size: 2vh;
+      bottom: 20%;
+    }
   }
 
   & .wavy-full {
@@ -53,8 +58,9 @@
 
 @media (max-width: 700px) {
   .intro-container {
+    height: 100vh;
+
     & #intro-title {
-      position: absolute;
       top: 40%;
       font-size: 12vw;
     }
