--- a/src/styles/welcome.scss
+++ b/src/styles/welcome.scss
@@ -21,6 +21,7 @@
   }
 
   .welcome-text-container {
+    padding-top: 20px;
     margin-left: 1em;
     margin-right: 1em;
     text-align: center;
